--- a/final lab.ipynb
+++ b/final lab.ipynb
@@ -874,7 +874,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- If $n$ is odd, a huge gap is formed at 0\n",
+    "- If $n$ is odd, a gap is formed at 0\n",
     "- If $n$ is even, $x=0$ is an endpoint of the subinterval, so no gap is formed at 0."
    ]
   },
@@ -1338,15 +1338,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unlike the cases for $x \\geq 2$, it seems like the rate of convergence is equal to $a$ for $x < 2$."
+    "Unlike the cases for $x \\geq 2$, it seems like the rate of convergence is equal to $a$ for $x < 2$. Thus, the rate of convergences is about $a$ and caps at 2 when $a$ reaches 2."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Let's consider $n$ is even. Then, 0 is an endpoint of a subinterval. Let's also assume x is in a subinterval $[c,c+\\frac{2}{n})$ If the right endpoint is less than $0$, the error is $0$. And for $0 \\leq x \\leq 1$, the linear function connecting two endpoint is \n",
+    "$E_a(x)=\\frac{f_a(c+h)-f_a(c)}{h}(x-c)+f_a(c)=\\frac{(c+h)^a-c^a}{h}(x-c)+c^a$ for $h=2/n$. The error function is $|E_a(x)-f_a(x)|=\\frac{(c+h)^a-c^a}{h}(x-c)+c^a-x^a$ and will have maximum when its derivative at $x$ is $0$\n",
+    "$\\frac{(c+h)^a-c^a}{h}-ax^{a-1}=0$ and $x=\\left[\\frac{(c+h)^a-c^a}{ah}\\right]^{\\frac{1}{a-1}}$\n",
+    "\n",
+    "Consider $n$ is odd. Then just like even case, the error is $0$ when both endpoints are less than 0, and is $|E_a(x)-f_a(x)|=\\frac{(c+h)^a-c^a}{h}(x-c)+c^a-x^a$ when both are greater than 0. However, when only one endpoint is less than 0, we have a gap around 0. Also, the estimate function is $E_a(x)=\\frac{f(h/2)-f(-h/2)}{h}(x+\\frac{h}{2})$, and the error will have maximum of $\\frac{(h/2)^a}{h}(\\frac{h}{2})=\\frac{h^a}{2^{a+1}}$ when $x=0$. \n",
+    "\n",
+    "- Case $a=2$ : If $n$ is even, $x=\\left[\\frac{(c+h)^2-c^2}{2h}\\right]^{\\frac{1}{2-1}}=c+\\frac{h}{2}$. So the maximum error occurs at the midpoint of the subinterval and $|E_a(x)-f_a(x)|=\\frac{(c+h)^2-c^2}{h}(\\frac{h}{2})+c^2-(c+\\frac{h}{2})^2=\\frac{h^2}{4}$. If $n$ is odd, the maximum error at 0 is $\\frac{h^a}{2^{a+1}}=\\frac{h^2}{2^{3}}$. For both even and odd $n$, the error is $O(\\frac{1}{n^2})$, thus the rate of convergence is 2."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1904,15 +1910,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unlike the cases for $x \\geq 2$, it seems like the rate of convergence is equal to $\\frac{a}{2}$ for $x < 2$."
+    "Unlike the cases for $x \\geq 2$, it seems like the rate of convergence is equal to $\\frac{a}{2}$ for $x < 2$. Thus, the rate of convergences is about $\\frac{a}{2}$ and caps at 1 when $a$ reaches 2."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2287,13 +2286,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
    "outputs": [
@@ -2388,7 +2380,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unlike above approximamtion methods, there seems to be no upper limit for Chebyshev.  Regardless of $a$, the rate of convergence is always approximately equal to $a$."
+    "Unlike above approximamtion methods, there seems to be no upper limit for Chebyshev.  Regardless of $a$, the rate of convergence is always approximately equal to $a$. So, for large $a$, the error decreases very rapidly as $n$ increases, whereas this process is rather slow for small $a$.\n",
+    "Thus, if $a$ is sufficiently large, Chebyshev approximation results in smallest error compared to previous approximation methods."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In conclusion, when $a$ is large, Chebyshev approximation offers the smallest error. For small $a$, piecewise constant approximate function, piecewise continuous linear approximation function, and Chebyshev approximation function all have a rate of convergence of $a$. However, Bernstein polynomial approximation function has a rate of $\\frac{a}{2}$, which offers largest error for all $a$. This implies it is the least recommended approxiation method of all litsed method."
    ]
   },
   {
